apps/matrix/overlays/nishir-tailnet/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matrix-discord
  annotations:
    tailscale.com/proxy-class: matrix-discord
    tailscale.com/tags: tag:web
spec:
  ingressClassName: tailscale
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matrix-googlechat
  annotations:
    tailscale.com/proxy-class: matrix-googlechat
    tailscale.com/tags: tag:web
spec:
  ingressClassName: tailscale
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matrix-linkedin
  annotations:
    tailscale.com/proxy-class: matrix-linkedin
    tailscale.com/tags: tag:web
spec:
  ingressClassName: tailscale
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matrix-meta
  annotations:
    tailscale.com/proxy-class: matrix-meta
    tailscale.com/tags: tag:web
spec:
  ingressClassName: tailscale
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matrix-proxy
  annotations:
    tailscale.com/funnel: "true"
    tailscale.com/proxy-class: matrix-proxy
    tailscale.com/tags: tag:web
spec:
  ingressClassName: tailscale
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matrix-signal
  annotations:
    tailscale.com/proxy-class: matrix-signal
    tailscale.com/tags: tag:web
spec:
  ingressClassName: tailscale
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matrix-slack
  annotations:
    tailscale.com/proxy-class: matrix-slack
    tailscale.com/tags: tag:web
spec:
  ingressClassName: tailscale
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matrix-telegram
  annotations:
    tailscale.com/proxy-class: matrix-telegram
    tailscale.com/tags: tag:web
spec:
  ingressClassName: tailscale
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matrix-twitter
  annotations:
    tailscale.com/proxy-class: matrix-twitter
    tailscale.com/tags: tag:web
spec:
  ingressClassName: tailscale
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matrix-whatsapp
  annotations:
    tailscale.com/proxy-class: matrix-whatsapp
    tailscale.com/tags: tag:web
spec:
  ingressClassName: tailscale
